# OpenEnv_hackathon

./: Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: generate_sample_terrain.py
data/sample_terrain/: elevation.npy  moisture.npy  vegetation.npy
examples/: run_random_agent.py
server/: app.py
src/: __init__.py  config.py  environment.py  models.py  tasks.py
tests/: test_environment.py
ui/: app.py
ui/templates/: index.html
